[package]
name = "kvs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
tokio = "1.47.1"


[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[[bin]]
name = "kvs-server"
path = "src/bin/kvs_server.rs"

[[bin]]
name = "kvs-client"
path = "src/bin/kvs_client.rs"