[package]
name = "kvs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
log = "0.4.28"
env_logger = "0.11.8"
slog = "2.8.0"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

[[bin]]
name = "kvs-server"
path = "src/bin/server.rs"

[[bin]]
name = "kvs-client"
path = "src/bin/client.rs"
